--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: CTF Write-Up
-description: entièrement en français et fait par ThaySan.
+description: entièrement en français et réalisé par ThaySan.
